fixes the branch in git clone bug. and copies the nginx conf in the container so that we can push the image with a default config

--- a/.originals/epadjs/Dockerfile
+++ b/.originals/epadjs/Dockerfile
@@ -7,7 +7,7 @@ USER node
 RUN mkdir -p /home/node/app
 WORKDIR /home/node/app
 
-RUN git clone -b support/environmentVariables https://github.com/RubinLab/epadjs.git /home/node/app/
+RUN git clone https://github.com/RubinLab/epadjs.git /home/node/app/
 
 RUN sed -i 's/react-scripts build/react-scripts --max_old_space_size=4096 build/g' /home/node/app/package.json
 
@@ -19,6 +19,7 @@ RUN npm run build
 
 FROM nginx:1.15
 COPY --from=build-stage /home/node/app/build/ /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY entrypoint.sh /usr/local/bin/entrypoint
 EXPOSE 80
 ENTRYPOINT [ "entrypoint" ]
