--- a/epad.yml
+++ b/epad.yml
@@ -11,7 +11,7 @@ keycloak:
   loc: "keycloak"
 couchdb:
   mode: image
-  image: latest
+  image: "2.3.1"
   port: 8888
   dblocation: "..\/couchdbloc"
 dicomweb:
