--- a/epad.yml
+++ b/epad.yml
@@ -11,7 +11,9 @@ keycloak:
   loc: "keycloak"
 couchdb:
   mode: image
-  image: "2.3.1"
+  image: "latest"
+  user: YOUR_COUCH_ADMIN_USER
+  password: YOUR_COUCH_ADMIN_PASS
   port: 8888
   dblocation: "..\/couchdbloc"
 dicomweb:
