--- a/epad.yml
+++ b/epad.yml
@@ -29,6 +29,9 @@ dicomweb:
   log: true
   auth: none
   loc: "pacs"
+  dimsetemp: "..\/dimsetemp"
+  dimseport: 4002
+  aet: "PACS"
 epadlite:
   mode: build
   dockerfiledir: ".\/epadlite"
