--- a/.originals/epadjs/Dockerfile
+++ b/.originals/epadjs/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:11-alpine as build-stage
+FROM node:lts-alpine as build-stage
 
 RUN apk update && apk upgrade && \
     apk add --no-cache bash git openssh
